# todoapp-monorepo

./: .editorconfig  .gitignore  Cargo.toml  compose.yml  otel-collector-config.yaml  package.json  pnpm-lock.yaml  rustfmt.toml
.github/workflows/: rust-ci.yml
apps/react-todoapp/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  vite.config.ts
apps/react-todoapp/src/: App.tsx  main.tsx  query.ts
apps/react-todoapp/src/components/: Footer.tsx  Item.tsx  List.tsx  footer.tsx  item.tsx  list.tsx
apps/react-todoapp/src/styles/: root.css  tailwind.css
apps/server/: .env.example  Cargo.toml  askama.toml  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
apps/server/migrations/: 20240211144057_add_todo_table.sql
apps/server/src/: main.rs
apps/server/src/domain/: exception.rs
apps/server/src/domain/entity/: health.rs  health_entity.rs  mod.rs  todo.rs
apps/server/src/domain/repository/: todo_repository.rs
apps/server/src/infra/: api_doc.rs  api_response.rs  app_error.rs  mod.rs  pg.rs  routes.rs  server.rs  tracing.rs
apps/server/src/infra/controller/: catchers_ctrl.rs  common_ctrl.rs  common_views_ctrl.rs  helper.rs  mod.rs  todo_ctrl.rs  todos_views_ctrl.rs
apps/server/src/infra/repository/: mod.rs  todo_inmemory_repo.rs  todo_pg_repo.rs
apps/server/src/infrastructure/: api_doc.rs  mod.rs  server.rs
apps/server/src/infrastructure/controller/: common_ctrl.rs  mod.rs
apps/server/src/styles/: root.css
apps/server/src/templates/: base.html  hello.html  index.html
apps/server/src/templates/components/: counter.html  footer.html  item.html  list.html
apps/server/src/templates/layout/: base.html
apps/server/src/templates/responses/: create_todo.html  list_todos.html  remove_todo.html  update_todo.html
apps/server/src/templates/views/: hello.html  index.html  stream.html
apps/server/src/usecase/: clear_all_completed_todos_usecase.rs  count_todos_usecase.rs  create_todo_usecase.rs  delete_todo_usecase.rs  get_all_todos_usecase.rs  health_usecase.rs  mark_as_done_todo_usecase.rs  mod.rs  search_todos_usecase.rs
apps/svelte-app/: package.json  tailwind.config.js  vite.config.ts
apps/svelte-app/src/lib/: Footer.svelte  Item.svelte  List.svelte  query.ts  queryClient.ts
apps/svelte-app/src/lib/types/: todo.ts
apps/svelte-app/src/routes/: +layout.svelte  +page.svelte
apps/svelte-app/src/styles/: root.css  tailwind.css
config/: loki-local.yaml  prometheus.yml  promtail-local.yaml
config/grafana-data/datasources/: datasource.yml
