[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
askama = { version = "0.12.1", features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
axum = { version = "0.7.2", features = ["tracing"] }
chrono = { version = "0.4.31", features = ["serde"] }
notify = "6.1.1"
random_word = { version = "0.4.1", features = ["fr", "en"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = [
	"trace",
	"fs",
	"compression-full",
] }
tower-livereload = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
utoipa = { version = "4.1.0", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
