[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
askama = { version = "0.12.1", features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
axum = { version = "0.7.2", features = ["tracing"] }
chrono = { version = "0.4.31", features = ["serde"] }
nanoid = "0.4.0"
notify = "6.1.1"
rand = "0.8.5"
random_word = { version = "0.4.1", features = ["fr", "en"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.5.0", features = [
	"trace",
	"fs",
	"compression-full",
	"cors",
] }
tower-livereload = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
utoipa = { version = "4.1.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
